@@ -42,6 +42,9 @@ class DAYLONGRAPHICSLIBRARY_API UDaylonSpriteWidget : public UWidget
 		virtual void SynchronizeProperties () override;
 		virtual void ReleaseSlateResources (bool bReleaseChildren) override;
 
+#if WITH_EDITOR
+		const FText GetPaletteCategory() override;
+#endif
 
 	protected:
 
