@@ -2,8 +2,13 @@ Bug list for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-August 27, 2023
+August 31, 2023
 
+
+It seems that when humans are sometimes debarked by player ship, they actually are 
+above the terrain by a small amount and need to fall for a brief moment
+before being on the ground. This causes excess gratitude icons to appear 
+or the player ship can even embark the human back if he moves quickly enough.
 
 FIXED: When mission picked, expanding cell started from slightly wrong y-position.
 
